--- a/sample/res/values/strings.xml
+++ b/sample/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">iab v3</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="wait">wait...</string>
 
 </resources>
