Add test for Fragment

--- a/sample/res/values/strings.xml
+++ b/sample/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">In-app Billing v3 Sample</string>
     <string name="wait">wait…</string>
     <string name="title">Sample Activity #%d</string>
+    <string name="fragment_title">Sample Fragment</string>
 
 </resources>
